--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<div class="container">
 				<div class="navbar-header">
 					<figure>
-					<img src="../images/logo_2.png" alt="">
+					<img src="/images/logo_2.png" alt="">
 					</figure>
 				</div>
 			</div>
